refactor models, repositoeires and mappers